force-app/main/default/objects/ssot__LearningProgramPlan__dlm/fields/ssot__DraftPlanContent__c.field-meta.xml
<CustomField>
    <fullName>ssot__DraftPlanContent__c</fullName>
    <label>Draft Plan Content</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DraftPlanContent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>