force-app/main/default/objects/ssot__LearningProgramPlan__dlm/fields/ssot__MinimumProgramGradePointAvgNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MinimumProgramGradePointAvgNumber__c</fullName>
    <label>Minimum Program Grade Point Average</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MinimumProgramGradePointAvgNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>