force-app/main/default/objects/ssot__LearningProgramPlan__dlm/fields/ssot__rel_1719817708184_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817708184_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningProgramPlan_ProviderId_map_A_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>LearningProgramPlan_ProviderId_map_A_rel</relationshipLabel>
    <relationshipName>rel_1719817708184_end</relationshipName>
    <type>Lookup</type>
</CustomField>