force-app/main/default/objects/ssot__LearningProgramPlan__dlm/fields/ssot__rel_1719819886410_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819886410_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningProgramPlan_LearningProgramI_rel</label>
    <referenceTo>ssot__LearningProgram__dlm</referenceTo>
    <relationshipLabel>LearningProgramPlan_LearningProgramI_rel</relationshipLabel>
    <relationshipName>rel_1719819886410_end</relationshipName>
    <type>Lookup</type>
</CustomField>